--- a/src/fxml/main.fxml
+++ b/src/fxml/main.fxml
@@ -1,20 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="998.0" stylesheets="@../css/styling.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane prefHeight="605.0" prefWidth="998.0">
-         <left>
-            <VBox prefHeight="549.0" prefWidth="67.0" style="-fx-background-color: #4199dd;" BorderPane.alignment="CENTER" />
-         </left>
-         <top>
-            <HBox prefHeight="56.0" prefWidth="941.0" style="-fx-background-color: #125ebf;" BorderPane.alignment="CENTER" />
-         </top>
-      </BorderPane>
+      <VBox prefHeight="605.0" prefWidth="67.0" style="-fx-background-color: #4199dd;">
+         <children>
+            <Pane prefHeight="92.0" prefWidth="67.0">
+               <children>
+                  <ImageView fitHeight="47.0" fitWidth="50.0" layoutX="9.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/6565bd61-0fe6-459e-9ae4-69ead84c1fc4.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <JFXButton contentDisplay="GRAPHIC_ONLY" lineSpacing="10.0" minHeight="0.0" minWidth="42.0" prefHeight="62.0" prefWidth="66.0" ripplerFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="99.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/user.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="10.0" layoutY="102.0" lineSpacing="10.0" minHeight="0.0" minWidth="42.0" prefHeight="62.0" prefWidth="66.0" ripplerFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="99.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/user.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="10.0" layoutY="102.0" lineSpacing="10.0" minHeight="0.0" minWidth="42.0" prefHeight="62.0" prefWidth="66.0" ripplerFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="99.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/user.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="10.0" layoutY="102.0" lineSpacing="10.0" minHeight="0.0" minWidth="42.0" prefHeight="62.0" prefWidth="66.0" ripplerFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="99.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/user.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="10.0" layoutY="226.0" lineSpacing="10.0" minHeight="0.0" minWidth="42.0" prefHeight="62.0" prefWidth="66.0" ripplerFill="WHITE">
+               <graphic>
+                  <ImageView fitHeight="99.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/user.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
